--- a/css/style.css
+++ b/css/style.css
@@ -467,50 +467,32 @@ span {
 .skills .skills-row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 2rem;
+  gap: 5rem;
 }
 
 .skills-row .skills-column {
-  flex: 1 1 48%;
-  min-width: 25rem;
-  margin-bottom: 2rem;
-}
-
-.skills-column .title {
-  position: relative;
-  display: inline-block;
-  font-size: 2.5rem;
-  margin: 0 0 1.5rem;
+  flex: 1 1 40rem;
 }
 
 .skills-column .skills-box {
-  position: relative;
-}
-
-.skills-box .skills-content {
   position: relative;
   border: 0.2rem solid var(--main-color);
   border-radius: 0.6rem;
   padding: 0.5rem 1.5rem;
   z-index: 1;
   overflow: hidden;
+  margin-bottom: 2rem;
 }
 
-.skills-box .skills-content::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: var(--bg-color);
-  z-index: -1;
-  transition: 0.5s;
+.skills-box .title {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  color: var(--main-color);
 }
 
-.skills-box .skills-content:hover::before {
-  width: 100%;
+.skills-box .skills-content {
+  position: relative;
+  z-index: 1;
 }
 
 .skills-content .progress {
@@ -543,47 +525,103 @@ span {
 }
 
 /* Web Development */
-.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
+.skills-column:nth-child(1)
+  .skills-box:nth-child(1)
+  .progress:nth-child(1)
+  .bar
+  span {
   width: 50%; /* HTML5 */
 }
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span {
+.skills-column:nth-child(1)
+  .skills-box:nth-child(1)
+  .progress:nth-child(2)
+  .bar
+  span {
   width: 50%; /* CSS3 */
 }
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span {
+.skills-column:nth-child(1)
+  .skills-box:nth-child(1)
+  .progress:nth-child(3)
+  .bar
+  span {
   width: 50%; /* JavaScript */
 }
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span {
+.skills-column:nth-child(1)
+  .skills-box:nth-child(1)
+  .progress:nth-child(4)
+  .bar
+  span {
   width: 85%; /* Python */
 }
-
-.skills-column:nth-child(1) .skills-content .progress:nth-child(5) .bar span {
+.skills-column:nth-child(1)
+  .skills-box:nth-child(1)
+  .progress:nth-child(5)
+  .bar
+  span {
   width: 35%; /* RESTful APIs */
 }
 
 /* Cloud */
-.skills-column:nth-child(2) .skills-content .progress .bar span {
-  width: 45%; /* AWS Services */
+.skills-column:nth-child(1)
+  .skills-box:nth-child(2)
+  .progress:nth-child(1)
+  .bar
+  span {
+  width: 40%; /* AWS Services */
 }
 
 /* DevOps / CI */
-.skills-column:nth-child(3) .skills-content .progress:nth-child(1) .bar span {
+.skills-column:nth-child(2)
+  .skills-box:nth-child(1)
+  .progress:nth-child(1)
+  .bar
+  span {
   width: 30%; /* Jenkins */
 }
-
-.skills-column:nth-child(3) .skills-content .progress:nth-child(2) .bar span {
-  width: 25%; /* Jenkins Continuous Integration */
+.skills-column:nth-child(2)
+  .skills-box:nth-child(1)
+  .progress:nth-child(2)
+  .bar
+  span {
+  width: 25%; /* Jenkins Continuous Integration (CI) */
 }
 
 /* Databases */
-.skills-column:nth-child(4) .skills-content .progress:nth-child(1) .bar span {
+.skills-column:nth-child(2)
+  .skills-box:nth-child(2)
+  .progress:nth-child(1)
+  .bar
+  span {
   width: 25%; /* mySQL */
 }
-
-.skills-column:nth-child(4) .skills-content .progress:nth-child(2) .bar span {
+.skills-column:nth-child(2)
+  .skills-box:nth-child(2)
+  .progress:nth-child(2)
+  .bar
+  span {
   width: 25%; /* Cassandra */
+}
+
+/* Version Control */
+.skills-column:nth-child(2)
+  .skills-box:nth-child(3)
+  .progress:nth-child(1)
+  .bar
+  span {
+  width: 65%; /* Git */
+}
+.skills-column:nth-child(2)
+  .skills-box:nth-child(3)
+  .progress:nth-child(2)
+  .bar
+  span {
+  width: 65%; /* GitHub | Bitbucket */
+}
+
+@media (max-width: 1200px) {
+  .skills-row .skills-column {
+    flex: 1 1 100%;
+  }
 }
 
 .contact {
